@@ -1,5 +1,11 @@
 Changes in version 1.4 (... 2007)
 
+ - Added river support for user defined clip planes, based on mandrav's patch.
+
+ - .obj files now load relative indices correctly. Collada files load textures.
+
+ - In some cases fullscreeen modes under win32 should have a better frame rate now.
+
  - Fixed the hillplane mesh to work with non-quadratic dimensions as well. Changed the interface also, so use a u32 dimension to specify the tilecount now.
 
  - Hires timers are disabled on windows systems with more than one CPU, due to bugs
